add, test and doc series post and options #7
